# Sorting-Agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md
excel-agent/: .env.example  README.md  pyproject.toml
excel-agent/app/: main.py
excel-agent/app/agents/: agent_factory.py  graph.py  nodes.py  prompts.py  state.py
excel-agent/app/api/: agent_api.py  file_api.py  memory_api.py
excel-agent/app/core/: config.py  logger.py
excel-agent/app/mcp_client/: excel_mcp_client.py  mcp_tool_adapter.py
excel-agent/app/memory/: memory_manager.py  redis_memory.py
excel-agent/app/schemas/: agent_schema.py
excel-agent/app/services/: agent_service.py  file_service.py
excel-agent/app/utils/: path_utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: agentApi.ts
frontend/src/components/: AgentStepCard.tsx  AgentSteps.tsx  ChatInput.tsx  ChatLayout.tsx  ChatMessage.tsx  ChatMessages.tsx  DownloadButton.tsx  EmptyState.tsx  FileBadge.tsx  FileUpload.tsx  ResultPanel.tsx  Sidebar.tsx  TaskInput.tsx
frontend/src/types/: agent.ts
frontend/src/utils/: fakeSteps.ts  id.ts
